1. Added sign-out message in  sign-in screen 2. Added pagination item. Added it to community main page. 3. Added Share in analyze/menu 4. Linked editor-backtest screen using web sockets

--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -153,6 +153,10 @@
 
 				<paper-icon-button noink class="iconButton" icon="icons:chrome-reader-mode" title="Compare" on-tap="onCompare" disabled="[[!isCompareActive(numActiveBacktests)]]">
 				</paper-icon-button>
+
+				<paper-icon-button noink class="iconButton" icon="vaadin-icons:share-square" title="Share" on-tap="onShare" disabled="[[!isShareActive(numActiveBacktests)]]">
+				</paper-icon-button>
+					
 			</div>      	
   		</div>
 
@@ -181,12 +185,20 @@
 				return numActiveBacktests > 0;
 			},
 
+			isShareActive(numActiveBacktests) {
+				return numActiveBacktests == 1;
+			},
+
 			onDelete() {
 				this.fire('deleteClicked');
 			},
 
 			onCompare() {
 				this.fire('compareClicked');
+			},
+
+			onShare() {
+				this.fire('shareClicked');
 			},
 
             goToEditor() {
