--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -49,13 +49,13 @@ paper-icon-button.html">
 
         <div class="flex"></div>
         <paper-tabs id='papertabs' selected="{{currentTab}}" noink>
-          <paper-tab on-tap='onHome'>HOME</paper-tab>
-          <paper-tab on-tap='onResearch'>RESEARCH</paper-tab>
-          <paper-tab on-tap='onInvestments'>INVESTMENTS</paper-tab>
-          <paper-tab on-tap='onAbout'>ABOUT US</paper-tab>
+          <paper-tab>HOME</paper-tab>
+          <paper-tab>RESEARCH</paper-tab>
+          <paper-tab>INVESTMENTS</paper-tab>
+          <paper-tab>ABOUT US</paper-tab>
           <template is='dom-if' if="{{!hasToken}}">
-            <paper-tab on-tap='onLogin'>LOG IN</paper-tab>
-            <paper-tab on-tap='onSignup'>SIGN UP</paper-tab>
+            <paper-tab>LOG IN</paper-tab>
+            <paper-tab>SIGN UP</paper-tab>
           </template>
 
         </paper-tabs>
@@ -84,6 +84,7 @@ paper-icon-button.html">
 
         currentTab: {
           type:Number,
+          notify:true,
         },
 
         hasToken: {
@@ -96,32 +97,8 @@ paper-icon-button.html">
         this.fire('open-menu');
       },
 
-      onLogin() {
-        this.fire('tabChanged',{tab:4});
-      },
-
-      onSignup() {
-        this.fire('tabChanged',{tab:5});
-      },
-
       computeShowMenu(hasHeader, currentTab) {
         return currentTab == 1;
-      },
-
-      onResearch() {
-        this.fire('tabChanged',{tab:1});
-      },
-
-      onHome() {    
-        this.fire('tabChanged',{tab:0});
-      },
-
-      onAbout(e) {    
-        this.fire('tabChanged',{tab:3});
-      },
-
-      onInvestments(e) {    
-        this.fire('tabChanged',{tab:2});
       },
 
     });
